delivery branches css tuning

--- a/lib/delivery_services/src/public/styles/delivery-service-branches.scss
+++ b/lib/delivery_services/src/public/styles/delivery-service-branches.scss
@@ -2,6 +2,14 @@
 	display: none;
 	padding: 0.75em 0.75rem 0 2.75rem;
 	border-top: 1px solid $border-color;
+	
+	@include media-breakpoint-only(md){
+		padding-left: 0.75rem;
+	}
+	@include media-breakpoint-down(xs){
+		padding-left: 0.75rem;
+	}
+	
 	.branch_button {
 		white-space: nowrap;
 		margin-bottom: 0.75rem;
