--- a/public/styles/_grid_test.scss
+++ b/public/styles/_grid_test.scss
@@ -4,6 +4,7 @@
 
 .body--fullwidth {
 	max-width: 100%;
+	background-color: white;
 	
 	header#header-main {
 		max-width: 100%;
@@ -12,8 +13,10 @@
 	.content-main {
 		//background-color: rgba(yellow,0.2);
 		
-		display: grid;
-		grid-template-columns: minmax(0, 1fr) minmax(0, $max-page-width) minmax(0, 1fr);
+		//@include media-breakpoint-up(md){
+			display: grid;
+			grid-template-columns: minmax(0, 1fr) minmax(0, $max-page-width) minmax(0, 1fr);
+		//}
 		
 		& > * {
 			outline: 1px dotted rgba(aqua,0.5);
@@ -24,12 +27,12 @@
 			//outline: 1px dotted red;
 		}
 		
-		& > .section--fullwidth {
+		& > .section--fullwidth, & > .fullwidth {
 			@include grid-fullwidth;
 			//outline: 1px dotted black;
 		}
 		
-		.section--narrow {
+		.section--narrow, .narrow {
 			max-width: $max-content-width;
 			margin-left: auto;
 			margin-right: auto;
@@ -48,37 +51,41 @@
 			
 		}
 		
-		& > h1, & > h2, & > h3, & > h4, & > h5, & > .h1, & > .h2, & > .h3, & > .h4, & > .h5, p {
+		& > h1, & > h2, & > h3, & > h4, & > h5, & > .h1, & > .h2, & > .h3, & > .h4, & > .h5, & > p {
 			background-color: rgba(pink,0.1);
 			max-width: $max-content-width + $grid-gutter-width * 2;
-			padding-left: $grid-gutter-width;
-			padding-right: $grid-gutter-width;
+			padding-left: $grid-gutter-width * 2;
+			padding-right: $grid-gutter-width * 2;
 			margin-left: auto;
 			margin-right: auto;
 			margin-bottom: $grid-gutter-width;
 		}
 	}
-}
-
-
-.section--text-over-image {
-	display: grid;
-	grid-template-columns: minmax(0, 1fr) minmax(0, $max-page-width) minmax(0, 1fr);
-	& > img {
-		grid-column: 1/4;
-		grid-row: 1/2;
-	}
-	& > div.container-fluid {
-		grid-column: 2/3;
-		grid-row: 1/2;
-		padding-top: $grid-gutter-width*2;
-		padding-bottom: $grid-gutter-width*2;
-		.display-1 {
-			text-align: center;
-			font-weight: 900;
-			color: black;
-			font-size: clamp(2em, 7vw, 100px);
+	
+	
+	.section--text-over-image {
+		@include media-breakpoint-up(md){
+			display: grid;
+			grid-template-columns: minmax(0, 1fr) minmax(0, $max-page-width) minmax(0, 1fr);
+		}
+		& > img {
+			grid-column: 1/4;
+			grid-row: 1/2;
+		}
+		& > div.container-fluid {
+			grid-column: 2/3;
+			grid-row: 1/2;
+			margin-top: $grid-gutter-width*2;
+			margin-bottom: $grid-gutter-width*2;
+			.display-1 {
+				text-align: center;
+				font-weight: 900;
+				color: black;
+				font-size: clamp(2em, 7vw, 100px);
+			}
 		}
 	}
 }
+
+
 
