--- a/public/styles/_lists.scss
+++ b/public/styles/_lists.scss
@@ -112,14 +112,14 @@ ul.list--radios {
 			}
 			
 			input[type=radio] {
-				opacity: 0.1;
+				opacity: 0;
 			}
 			
 			input[type=radio] ~ label {
 				&:before {
 					position: absolute;
 					left: $itemPadding;
-					top: $itemPadding;
+					//top: $itemPadding;
 					display: block;
 					content: "";
 					width: $inputSize;
@@ -147,7 +147,7 @@ ul.list--radios {
 					position: absolute;
 					display: block;
 					left: $itemPadding + ($inputSize - $dotSize) / 2;
-					top: $itemPadding + ($inputSize - $dotSize) / 2;
+					//top: $itemPadding + ($inputSize - $dotSize) / 2;
 					width: $dotSize;
 					height: $dotSize;
 					border-radius: 50%;
@@ -162,6 +162,7 @@ ul.list--radios {
 			
 			label {
 				display: flex;
+				align-items: center;
 				position: relative;
 				padding: $itemPadding;
 				padding-left: $itemPadding * 2 + $inputSize;
