Delivery branch button floating right  on most viewport size

--- a/lib/delivery_services/src/public/styles/delivery-service-branches.scss
+++ b/lib/delivery_services/src/public/styles/delivery-service-branches.scss
@@ -3,13 +3,6 @@
 	padding: 0.75em 0.75rem 0 2.75rem;
 	border-top: 1px solid $border-color;
 	
-	@include media-breakpoint-only(md){
-		padding-left: 0.75rem;
-	}
-	@include media-breakpoint-down(xs){
-		padding-left: 0.75rem;
-	}
-	
 	.branch_button {
 		white-space: nowrap;
 		margin-bottom: 0.75rem;
@@ -17,17 +10,33 @@
 		text-align: right;
 		padding-left: 0.75rem;
 		display: block;
+		float: right;
 	}
 	.branch_address {
 		display: block;
 		font-size: $font-size-sm;
-		margin-bottom: 0.75rem;
+		padding-bottom: 0.75rem;
+	}	
+	
+	@include media-breakpoint-only(md){
+		padding-left: 0.75rem;
+		.branch_button {
+			float: none;
+		}
+	}
+	@include media-breakpoint-down(xs){
+		padding-left: 0.75rem;
+	}
+	@media(max-width:420px){
+		.branch_button {
+			float: none;
+		}
 	}
 }
 
 // branch address with set branch link
 #form_checkouts_set_payment_and_delivery_method ul.list--radios li.checked .delivery_service_branch {
-	display: flex;
+	display: block;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
