scss spacing utilities moved to its own file

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -16,6 +16,9 @@ $enable-deprecation-messages: false;
 // Application specific variables, overrides bootstrap vars.
 @import "application_variables";
 
+// Spacing utiltities (must be imported after bootstrap_variables and before bootstrap)
+@import "spacing_utilities";
+
 // Fonts
 @import "fonts";
 
