--- a/public/styles/_slider.scss
+++ b/public/styles/_slider.scss
@@ -1,9 +1,5 @@
 .section--slider {
-<<<<<<< HEAD
 	max-width: $max-page-width;
-=======
-	//max-width: $max-page-width;
->>>>>>> atk14catalog/feature/themes_for_iobjects
 	margin: auto;
 	padding: 0;
 	border: none;
@@ -44,8 +40,6 @@
 		}
 	}
 	
-<<<<<<< HEAD
-=======
 	&--thumbnails {
 		// set correct order for sliders.
 		// thumbnails must be placed before main slider in markup.
@@ -56,6 +50,7 @@
 		& > * {
 			width: auto !important;
 			max-width: 100%;
+			min-width: 100%;
 		}
 		.swiper--thumbnails {
 			order: 1;
@@ -72,17 +67,12 @@
 		}
 	}
 	
->>>>>>> atk14catalog/feature/themes_for_iobjects
 }
 .swiper-container {
 	//max-width: $maxContainerWidth -($grid-gutter-width*3);
 	//max-width: $maxContainerWidth;
 
-<<<<<<< HEAD
-	&[data-slides_per_view="auto"] {
-=======
 	&[data-slides_per_view="auto"]:not(.swiper--thumbnails) {
->>>>>>> atk14catalog/feature/themes_for_iobjects
 		.swiper-wrapper {
 			.swiper-slide {
 				filter: brightness(0.5);
@@ -103,6 +93,7 @@
 	justify-content: center;
 	align-items: center;
 	background-image: none;
+	margin-top: calc(var(--swiper-navigation-size) / -2);
 	&:before {
 		font-family: "Font Awesome 5 Free";
 		color: white;
@@ -190,14 +181,6 @@
 	}
 }
 
-<<<<<<< HEAD
-.swiper-container {
-	&.swiper--images {
-		//margin-top: 0 - $grid-gutter-width;
-		//margin-left: 0 - $grid-gutter-width;
-		//margin-right: 0 - $grid-gutter-width;
-		background-color: $border-color;
-=======
 //.swiper-container {
 	.swiper--images {
 		.swiper-slide {
@@ -226,18 +209,14 @@
 		}
 		
 		
->>>>>>> atk14catalog/feature/themes_for_iobjects
 		img {
 			background-color: white;
 		}
 		.swiper-pagination {
 			width: 100% !important;
-<<<<<<< HEAD
-=======
 			position: static !important;
 			margin: $grid-gutter-width/4 0;
 			margin: 0;
->>>>>>> atk14catalog/feature/themes_for_iobjects
 		}
 		@include media-breakpoint-down(sm) {
 			//margin-top: 0 - $grid-gutter-width/2;
@@ -253,13 +232,6 @@
 			//margin-left: 0 - $grid-gutter-width/2;
 			//margin-right: 0 - $grid-gutter-width/2;
 			.swiper-pagination {
-<<<<<<< HEAD
-				display: none;
-			}
-		}
-	}
-}
-=======
 				//display: none;
 			}
 		}
@@ -290,7 +262,7 @@
 .swiper--thumbnails {
 	background-color: $dark;
 	//border-top: 1px solid $gray-600;
-	padding: 5px 0;
+	padding: 5px;
 	.swiper-slide {
 		filter: brightness(0.7);
 		transition: filter 0.35s;
@@ -303,4 +275,3 @@
 	}
 }
 
->>>>>>> atk14catalog/feature/themes_for_iobjects
