better grid layout test page

--- a/public/styles/_development_utils.scss
+++ b/public/styles/_development_utils.scss
@@ -98,3 +98,11 @@
 		}
 	}
 }
+
+.microtext {
+	font-size: 10px;
+	color: #666666;
+	line-height: 1;
+	font-weight: bold;
+	background-color: rgba(yellow,0.3);
+}
