styleguides in progress

--- a/public/styles/_grid_test.scss
+++ b/public/styles/_grid_test.scss
@@ -119,7 +119,8 @@ body.body--fullwidth {
 			padding-right: 0;
 		}
 		
-		& > h1, & > h2, & > h3, & > h4, & > h5, & > .h1, & > .h2, & > .h3, & > .h4, & > .h5, & > p {
+		& > h1, & > h2, & > h3, & > h4, & > h5, & > .h1, & > .h2, & > .h3, & > .h4, & > .h5, & > p, & > ul, & > ol {
+			//@include grid-content;
 			@if $griddebug {
 				background-color: rgba(pink,0.1);
 			}
