search results redesign in progress

--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -120,6 +120,13 @@ $card-border-style: 1px dashed $border-color;
 			top: -0.2em;
 			color: $brand;
 			align-self: flex-end;
+			a {
+				color: inherit;
+				&:hover {
+					text-decoration: none;
+					color: $link-color;
+				}
+			}
 		}
 		.btn > .card-footer__icon:first-child {
 			margin-right: 0.25em;
