Search results redesign in progress

--- a/public/styles/_search_results.scss
+++ b/public/styles/_search_results.scss
@@ -118,16 +118,33 @@ form#form_searches_index {
 }
 
 .card--search {
-	background-color: rgba(yellow,0.2);
-	&:not(.card--search--author) {
+	&:not(.card--search--creator) {
 		order: 10;
-		background-color: rgba(green,0.2);
 	}
-	&--author {
+	&--creator {
 		order: 0;
-		background-color: rgba(red,0.2);
-		outline: 2px solid red;
 		flex-basis: 50% !important;
 		max-width: 50% !important;
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: stretch;
+		& > .creator_profile {
+			@extend .card;
+			flex-basis: 50% !important;
+			max-width: 50% !important;
+			flex-shrink: 0;
+			border: none !important;
+		}
+		& > .creator_works {
+			flex-basis: 50%;
+			flex-shrink: 0;
+			padding: $card-spacer-x;
+			.card--micro {
+				max-width: 90px;
+				min-width: 90px;
+				flex-basis: percenage(1/3);
+			}
+		}
 	}
 }
