search results creatir card css fix

--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -296,14 +296,15 @@ $card-border-style: 1px dashed $border-color;
 			align-items: stretch;
 			& > .creator_profile {
 				@extend .card;
-				flex-basis: 50% !important;
-				max-width: 50% !important;
+				flex-basis: calc(50% - #{$card-deck-margin}) !important;
+				max-width: calc(50% - #{$card-deck-margin}) !important;
 				flex-shrink: 0;
 				border: none !important;
 			}
 			& > .creator_works {
 				flex-basis: 50%;
 				flex-shrink: 0;
+				flex-grow: 2;
 				padding: $card-spacer-x;
 				.card--micro {
 					max-width: 90px;
