--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -163,7 +163,8 @@ $card-border-style: 1px dashed $border-color;
 		font-weight: 600;
 		line-height: 1;
 		color: white;
-		background-color: rgba(black,0.8);
+		background-color: rgba($secondary,0.8);
+		font-size: $font-size-sm;
 		
 	}
 	
