--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -282,10 +282,9 @@ $card-border-style: 1px dashed $border-color;
 		}
 		&--creator {
 			//order: 0;
-			//flex-basis: calc(50% - #{$card-deck-margin * 2}) !important;
+			flex-basis: calc(50% - #{$card-deck-margin * 2}) !important;
 			//max-width: calc(50% - #{$card-deck-margin * 2})  !important;
 			.card-deck > & {
-				outline: 1px solid red;
 				order: 0;
 				flex-basis: calc(50% - #{$card-deck-margin * 2}) !important;
 				max-width: calc(50% - #{$card-deck-margin * 2})  !important;
@@ -711,7 +710,15 @@ a.card {
 
 .card-grid {
 	display: grid;
+	
 	&--cols-4 {
+		// flex for IE
+		& > .card {
+			flex-basis: 100%;
+			flex-grow: 0;
+			flex-shrink: 0;
+		}
+		
 		@include media-breakpoint-up(sm) {
 			//grid-gap: $card-deck-margin * 2;
 			grid-auto-flow: dense;
@@ -723,12 +730,29 @@ a.card {
 		}
 		@include media-breakpoint-between(sm,md) {
 			grid-template-columns: 1fr 1fr;
+			& > .card {
+				flex-basis: 50%;
+			}
 		}
 		@include media-breakpoint-only(lg) {
 			grid-template-columns: 1fr 1fr 1fr;
+			& > .card {
+				flex-basis: percentage(1/3);
+			}
 		}
 		@include media-breakpoint-up(xl) {
 			grid-template-columns: 1fr 1fr 1fr 1fr;
+			& > .card {
+				flex-basis: 25%;
+			}
 		}
 	}
+	
+	// flex for IE 
+	@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+		display: flex !important;
+		flex-wrap: wrap;
+	
+	}
+
 }
