--- a/public/admin/styles/application.scss
+++ b/public/admin/styles/application.scss
@@ -60,3 +60,4 @@ $enable-deprecation-messages: false;
 @import "shared/colors";
 @import "shared/color_radio_checkbox";
 @import "shared/tags";
+@import "shared/tooltips";
