--- a/public/styles/_slider.scss
+++ b/public/styles/_slider.scss
@@ -10,6 +10,7 @@
 		align-items: center;
 		background-color: $gray-100;
 		position: relative;
+		height: auto;
 		&__image {
 			//height: 425px;
 			flex-basis: 50%;
