--- a/public/styles/_lists.scss
+++ b/public/styles/_lists.scss
@@ -391,12 +391,14 @@ ul.list--active-filters {
 }
 
 .list--icons {
+	text-align: initial;
 	@extend .list-unstyled;
 	li {
 		display: flex;
 		.list--icons__icon {
 			display: block;
 			flex-basis: 3ch;
+			flex-grow: 0;
 			color: $secondary;
 			flex-shrink: 0;
 		}
