admin dropdowns css tuning

--- a/public/admin/styles/application.scss
+++ b/public/admin/styles/application.scss
@@ -50,6 +50,8 @@ $enable-deprecation-messages: false;
 
 @import "drag_and_drop";
 
+@import "dropdowns";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/buttons";
