--- a/public/admin/styles/_charts.scss
+++ b/public/admin/styles/_charts.scss
@@ -1,10 +1,14 @@
 .dashboard-chart {
+
+	.chart-wrapper {
+		border: 1px solid red;
+		width: 100%;
+		overflow: auto;
+	}
+
 	.chart-canvas-container {
-		//width: 100%;
-		//max-width: 100%;
 		position: relative;
-		//overflow-x: hidden;
-		//overflow: hidden;
+		min-width: 1200px;
 
 		.dashboard-chart__canvas {
 			width: 800px;
