[pickup_points] GLS map widget

--- a/lib/delivery_services/src/public/styles/delivery-service-branches.scss
+++ b/lib/delivery_services/src/public/styles/delivery-service-branches.scss
@@ -43,6 +43,10 @@
 	z-index: $zindex-modal;
 }
 
+#atk14-widget-gls {
+	height: 600px;
+	width: 100%;
+}
 #atk14-widget-zasilkovna {
 	height: 600px;
 }
