--- a/public/styles/_checkout.scss
+++ b/public/styles/_checkout.scss
@@ -14,5 +14,25 @@
 }
 
 .cards--addresses {
-	margin-bottom: $grid-gutter-width;
+	margin-bottom: $grid-gutter-width !important;
+	.js--card-address {
+		border: 2px solid transparent;
+	}
+	.card--active {
+		//border: 2px solid $secondary;
+		//background-color: $secondary;
+		//color: color-yiq( $secondary );
+		animation-name: card--address--on-selection;
+		animation-duration: 1.25s;
+		animation-iteration-count: 1;
+	}
+}
+
+@keyframes card--address--on-selection {
+	from {
+		border-color: $secondary;
+	} to {
+		border-color: transparent;
+	}
+	
 }
