Cookieconsent dialog is positioned under a modal dialog

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -108,6 +108,8 @@ $enable-deprecation-messages: false;
 
 @import "modals";
 
+@import "cookieconsent";
+
 @import "digital_contents";
 
 @import "logo_grid";
