--- a/public/styles/_cookieconsent.scss
+++ b/public/styles/_cookieconsent.scss
@@ -1,4 +1,4 @@
 // We need to have the cookiconsent dialog under a modal dialog
 #js--cookieconsent-container>div {
-	z-index: 10;
+	z-index: $zindex-fixed;
 }
