[pickup_points] Czech Post - Balikovna map widget

--- a/lib/delivery_services/src/public/styles/delivery-service-branches.scss
+++ b/lib/delivery_services/src/public/styles/delivery-service-branches.scss
@@ -48,6 +48,12 @@
 	width: 100%;
 	margin-bottom: -7px;
 }
+
+#atk14-widget-cp-balikovna {
+	height: 600px;
+	width: 100%;
+}
+
 #atk14-widget-zasilkovna {
 	height: 600px;
 }
