--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -108,7 +108,7 @@ $enable-deprecation-messages: false;
 
 @import "modals";
 
-@import "cookieconsent";
+@import "cookie_consent";
 
 @import "digital_contents";
 
