Updated Swiper to 7.3 and UglifyJS. Migrated all sliders to Swiper 7.x (replaced all occurences of "swiper-container" with "swiper")

--- a/public/styles/_slider.scss
+++ b/public/styles/_slider.scss
@@ -69,7 +69,7 @@
 	}
 	
 }
-.swiper-container {
+.swiper {
 	//max-width: $maxContainerWidth -($grid-gutter-width*3);
 	//max-width: $maxContainerWidth;
 
@@ -182,7 +182,7 @@
 	}
 }
 
-//.swiper-container {
+//.swiper {
 	.swiper--images {
 		.swiper-slide {
 			height: auto;
