--- a/public/admin/styles/application.scss
+++ b/public/admin/styles/application.scss
@@ -51,6 +51,7 @@ $enable-deprecation-messages: false;
 @import "drag_and_drop";
 
 @import "dropdowns";
+@import "dark_mode";
 
 @import "shared/clearfix";
 @import "shared/loading";
