Better style for <mark>

--- a/public/styles/_typography.scss
+++ b/public/styles/_typography.scss
@@ -8,7 +8,8 @@
 
 mark {
 	padding: 0;
-	background-color: rgba($primary,0.2);
+	background-color: rgba($yellow,0.2);
+	color: inherit;
 }
 
 // icon at the heading beginning woould have slight more space before text
